--- a/morsecodeaudiotest.html
+++ b/morsecodeaudiotest.html
@@ -6,6 +6,8 @@
 <script>
   var m = new jscw({"wpm": 25});
   m.setText("I am going to die");
-  m.play("I am going to die");
+
+  //m.setWpm(24);
+  m.play("Good morning, China.Now I have ice cream.I like ice cream very much, but Fast and Furious 9 is better than ice cream.");
   //m.renderPlayer('player', m);
 </script>
